--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -1,11 +1,35 @@
-body{
-    margin: 0 auto;
-    padding: 0px;
-}
+
 .image-wrapper{
+    width:100%;
+    height:100%;
+    position:relative;
+}
+.image-wrapper img{
     width:100%;
     height:100%
 }
-.image-wrapper img{
-    width:100%
+.nav-wrapper{
+    position: absolute;
+    width: 100%;
+    left:2%;
+    top:2%;
+}
+.nav-wrapper ul{
+    width: 100%;
+}
+
+.nav-wrapper ul li .active{
+    margin-right: 500px;
+}
+
+.nav-wrapper ul li{
+    list-style-type: none;
+    float:left;
+    padding:20px;
+}
+.nav-wrapper ul li .nav-item{
+    float:right;
+}
+.justify-content-end{
+    margin-right: 10%;
 }
